Finished and commented eric.c

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,15 +1,20 @@
 CFLAGS = -g -Wall
 LIBS = -lm
 
+ROOT = /usr/local
+
 all: liberic.so
 
-liberic.so:
-	$(CC) $(CFLAGS) --shared -fpic eric.c -c -lm
+liberic.so: eric.o
 	$(CC) $(CFLAGS) --shared -fpic eric.o -o liberic.so -lm
 
+eric.o: eric.c
+	$(CC) $(CFLAGS) --shared -fpic eric.c -c -lm
+
+
 install: liberic.so
-	cp eric.h /usr/local/include/eric.h
-	cp liberic.so /usr/local/lib/liberic.so
+	cp eric.h $(ROOT)/include/eric.h
+	cp liberic.so $(ROOT)/lib/liberic.so
 	ldconfig
 
 clean:
