Consolidated eric.[ch] comments into top-of-file documentation.

--- a/c/sdl/Makefile
+++ b/c/sdl/Makefile
@@ -1,15 +1,19 @@
 CFLAGS = -g -Wall `sdl-config --cflags` -L/usr/local/lib
 LIBS = -lm -leric `sdl-config --libs` -lSDL_image -lSDL_gfx -lSDL_ttf -lSDL_mixer
 
+ROOT = /usr/local
+
 all: libericsdl.so
 
 libericsdl.so: ericsdl.o
-	$(CC) $(CFLAGS) --shared -fpic ericsdl.c -c -lm
 	$(CC) $(CFLAGS) --shared -fpic ericsdl.o -o libericsdl.so -lm
 
+ericsdl.o: ericsdl.c
+	$(CC) $(CFLAGS) --shared -fpic ericsdl.c -c -lm
+
 install: libericsdl.so
-	cp ericsdl.h /usr/local/include/ericsdl.h
-	cp libericsdl.so /usr/local/lib/libericsdl.so
+	cp ericsdl.h $(ROOT)/include/ericsdl.h
+	cp libericsdl.so $(ROOT)/lib/libericsdl.so
 	ldconfig
 
 clean:
